--- a/package.json
+++ b/package.json
@@ -37,14 +37,17 @@
     "@sitecore-jss/sitecore-jss-nextjs": "^21.0.8",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.2",
+    "css-loader": "^6.7.3",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
     "graphql-tag": "^2.11.0",
     "next": "^12.3.1",
     "next-localization": "^0.12.0",
     "nprogress": "~0.2.0",
+    "postcss-loader": "^7.0.2",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
