--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   "scripts": {
     "bootstrap": "ts-node --project tsconfig.scripts.json scripts/bootstrap.ts && graphql-let",
     "build": "npm-run-all --serial bootstrap next:build",
+    "build:pnpm": "$_ bootstrap & $_ next:build",
     "graphql:update": "ts-node --project tsconfig.scripts.json ./scripts/fetch-graphql-introspection-data.ts",
     "jss": "jss",
     "lint": "eslint ./src/**/*.tsx ./src/**/*.ts ./scripts/**/*.ts",
@@ -117,6 +118,7 @@
     "start:watch-components": "ts-node --project tsconfig.scripts.json scripts/generate-component-factory.ts --watch",
     "test": "jest",
     "storybook": "npm-run-all --serial bootstrap & storybook dev -p 6006",
+    "storybook:pnpm": "$_ bootstrap & $_ storybook dev -p 6006",
     "build-storybook": "npm-run-all --serial bootstrap storybook build"
   }
 }
