--- a/.env
+++ b/.env
@@ -6,14 +6,14 @@
 # The public URL to use for absolute URLs, which are required when
 # the Next.js app is run within Sitecore editors.
 # This should match the `serverSideRenderingEngineApplicationUrl`
-# in your Sitecore configuration (see \sitecore\config\dfic-jss.config).
+# in your Sitecore configuration (see \sitecore\config\jss-starter-jss.config).
 # Be sure to update these values accordingly as your public endpoint changes.
 # See https://jss.sitecore.com/docs/fundamentals/services/view-engine
 PUBLIC_URL=http://localhost:3000
 
 # To secure the Sitecore editor endpoint exposed by your Next.js app
 # (`/api/editing/render` by default), a secret token is used. This (client-side)
-# value must match your server-side value (see \sitecore\config\dfic-jss.config).
+# value must match your server-side value (see \sitecore\config\jss-starter-jss.config).
 # We recommend an alphanumeric value of at least 16 characters.
 JSS_EDITING_SECRET=
 
