--- a/sitecore/config/jss.config
+++ b/sitecore/config/jss.config
@@ -65,9 +65,9 @@
       -->
       <site patch:before="site[@name='website']"
             inherits="website"
-            name="dfic-jss"
-            hostName="dfic-jss.dev.local"
-            rootPath="/sitecore/content/dfic-jss"
+            name="jss-starter-jss"
+            hostName="jss-starter-jss.dev.local"
+            rootPath="/sitecore/content/jss-starter-jss"
             startItem="/home"
             database="master" />
     </sites>
@@ -87,9 +87,9 @@
           since language is required in all Edge queries. "jss" configuration does not do this (which is backwards
           compatible with JSS versions < 18.0.0).
         -->
-        <app name="dfic-jss"
+        <app name="jss-starter-jss"
             layoutServiceConfiguration="default"
-            sitecorePath="/sitecore/content/dfic-jss"
+            sitecorePath="/sitecore/content/jss-starter-jss"
             useLanguageSpecificLayout="true"
             graphQLEndpoint="/sitecore/api/graph/edge"
             inherits="defaults"
