--- a/package.json
+++ b/package.json
@@ -110,21 +110,21 @@
   },
   "scripts": {
     "bootstrap": "ts-node --project tsconfig.scripts.json scripts/bootstrap.ts && graphql-let",
-    "build": "npm-run-all --serial bootstrap next:build",
+    "build": "$npm_execpath run bootstrap && next build",
     "graphql:update": "ts-node --project tsconfig.scripts.json ./scripts/fetch-graphql-introspection-data.ts",
     "jss": "jss",
     "lint:js": "eslint ./src/**/*.tsx ./src/**/*.ts ./scripts/**/*.ts",
     "next:build": "next build",
     "next:dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "next:start": "next start",
-    "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component.ts",
-    "start": "cross-env-shell JSS_MODE=disconnected \"npm-run-all --serial bootstrap --parallel next:dev start:disconnected-proxy start:watch-components\"",
-    "start:connected": "npm-run-all --serial bootstrap --parallel next:dev start:watch-components",
+    "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component.ts",    
+    "start": "cross-env-shell JSS_MODE=disconnected \"$npm_execpath run start:connected\"",
+    "start:connected": "$npm_execpath run bootstrap && ($npm_execpath run next:dev &  $npm_execpath run start:watch-components)",
     "start:disconnected-proxy": "ts-node --project tsconfig.scripts.json ./scripts/disconnected-mode-proxy.ts",
-    "start:production": "npm-run-all --serial bootstrap next:build next:start",
+    "start:production": "$npm_execpath run bootstrap && $npm_execpath run next:build && $npm_execpath run next:start",
     "start:watch-components": "ts-node --project tsconfig.scripts.json scripts/generate-component-factory.ts --watch",
     "test": "jest",
-    "storybook": "npm-run-all --serial bootstrap & storybook dev -p 6006",
-    "build-storybook": "npm-run-all --serial bootstrap storybook build"
+    "storybook": "$npm_execpath run bootstrap && storybook dev -p 6006",
+    "build-storybook": "$npm_execpath run bootstrap && storybook build"
   }
 }
