NOJIRA: Enables Storybook controls for data in nested objects.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
     "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.21",
     "next": "^12.3.1",
     "next-localization": "^0.12.0",
     "nprogress": "~0.2.0",
@@ -60,7 +61,8 @@
     "@graphql-typed-document-node/core": "^3.1.0",
     "@sitecore-jss/sitecore-jss-cli": "^21.0.8",
     "@sitecore-jss/sitecore-jss-dev-tools": "^21.0.8",
-    "@storybook/addon-essentials": "^7.0.0-beta.63",
+    "@storybook/addon-docs": "^6.5.16",
+    "@storybook/addon-essentials": "7.0.0-rc.0",
     "@storybook/addon-interactions": "^7.0.0-beta.63",
     "@storybook/addon-links": "^7.0.0-beta.63",
     "@storybook/blocks": "^7.0.0-beta.63",
@@ -71,6 +73,7 @@
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
     "@types/jest": "^28.1.0",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^14.6.4",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.12",
@@ -99,7 +102,7 @@
     "prettier": "^2.1.2",
     "sass": "^1.52.3",
     "sass-alias": "^1.0.5",
-    "storybook": "^7.0.0-beta.63",
+    "storybook": "7.0.0-rc.7",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^6.0.3",
@@ -117,7 +120,7 @@
     "next:build": "next build",
     "next:dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "next:start": "next start",
-    "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component.ts",    
+    "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component.ts",
     "start": "cross-env-shell JSS_MODE=disconnected \"$npm_execpath run start:connected\"",
     "start:connected": "$npm_execpath run bootstrap && ($npm_execpath run next:dev &  $npm_execpath run start:watch-components)",
     "start:disconnected-proxy": "ts-node --project tsconfig.scripts.json ./scripts/disconnected-mode-proxy.ts",
