--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-loader": "^7.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "storybook-dark-mode": "^2.1.1",
     "style-loader": "^3.3.1"
   },
   "devDependencies": {
