--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "@storybook/addon-interactions": "^7.0.0-beta.63",
     "@storybook/addon-links": "^7.0.0-beta.63",
     "@storybook/blocks": "^7.0.0-beta.63",
+    "@storybook/manager-api": "^7.0.4",
     "@storybook/nextjs": "^7.0.0-beta.63",
     "@storybook/react": "^7.0.0-beta.63",
     "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/theming": "^7.0.4",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
