--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.1.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.2",
