--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^6.0.3",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-classnames": "^3.0.7",
     "tailwindcss-themer": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "~4.3.5",
