--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^6.0.3",
+    "tailwind-variants": "^0.1.4",
     "tailwindcss": "^3.2.7",
     "tailwindcss-classnames": "^3.0.7",
     "tailwindcss-themer": "^3.0.1",
