--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
   },
   "scripts": {
     "bootstrap": "ts-node --project tsconfig.scripts.json scripts/bootstrap.ts && graphql-let",
-    "build": "yarpm run bootstrap && next build",
+    "build": "yarpm-pnpm run bootstrap",
     "graphql:update": "ts-node --project tsconfig.scripts.json ./scripts/fetch-graphql-introspection-data.ts",
     "jss": "jss",
     "lint:js": "eslint ./src/**/*.tsx ./src/**/*.ts ./scripts/**/*.ts",
@@ -124,13 +124,13 @@
     "next:dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "next:start": "next start",
     "scaffold": "ts-node --project tsconfig.scripts.json scripts/scaffold-component.ts",
-    "start": "cross-env-shell JSS_MODE=disconnected \"yarpm run start:connected\"",
-    "start:connected": "yarpm run bootstrap && (yarpm run next:dev &  yarpm run start:watch-components)",
+    "start": "cross-env-shell JSS_MODE=disconnected \"yarpm-pnpm run start:connected\"",
+    "start:connected": "yarpm-pnpm run bootstrap && (yarpm-pnpm run next:dev &  yarpm-pnpm run start:watch-components)",
     "start:disconnected-proxy": "ts-node --project tsconfig.scripts.json ./scripts/disconnected-mode-proxy.ts",
-    "start:production": "yarpm run bootstrap && yarpm run next:build && yarpm run next:start",
+    "start:production": "yarpm-pnpm run bootstrap && yarpm-pnpm run next:build && yarpm-pnpm run next:start",
     "start:watch-components": "ts-node --project tsconfig.scripts.json scripts/generate-component-factory.ts --watch",
     "test": "jest",
-    "storybook": "yarpm run bootstrap && storybook dev -p 6006",
-    "build-storybook": "yarpm run bootstrap && storybook build"
+    "storybook": "yarpm-pnpm run bootstrap && storybook dev -p 6006",
+    "build-storybook": "yarpm-pnpm run bootstrap && storybook build"
   }
 }
