--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.1.0",
     "bootstrap": "^5.1.3",
-    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "css-loader": "^6.7.3",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
@@ -115,7 +115,6 @@
     "stylelint-order": "^6.0.3",
     "tailwind-variants": "^0.1.4",
     "tailwindcss": "^3.2.7",
-    "tailwindcss-classnames": "^3.0.7",
     "tailwindcss-themer": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "~4.3.5",
