--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.1.0",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.2.1",
     "css-loader": "^6.7.3",
@@ -100,6 +101,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-yaml": "^0.2.0",
     "graphql-let": "^0.16.2",
+    "husky": "^8.0.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "npm-run-all": "~4.1.5",
@@ -119,8 +121,7 @@
     "tailwindcss-themer": "^3.0.1",
     "ts-node": "^9.0.0",
     "typescript": "~4.3.5",
-    "yaml-loader": "^0.6.0",
-    "husky": "^8.0.0"
+    "yaml-loader": "^0.6.0"
   },
   "scripts": {
     "bootstrap": "ts-node --project tsconfig.scripts.json scripts/bootstrap.ts && graphql-let",
