NOJIRA: Stubbed-out Google Material Symbol component.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-icons/svg": "^1.0.33",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.1.0",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
