NOJIRA: Upgrading to Storybook 7.0.15.

--- a/package.json
+++ b/package.json
@@ -43,19 +43,16 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.2.1",
-    "css-loader": "^6.7.3",
+    "css-loader": "^6.7.4",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
     "graphql-tag": "^2.11.0",
-    "husky": "^8.0.3",
     "lodash": "^4.17.21",
-    "next": "^13.1.6",
+    "next": "^13.4.3",
     "next-localization": "^0.12.0",
     "nprogress": "~0.2.0",
-    "postcss-loader": "^7.0.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "style-loader": "^3.3.1"
+    "postcss-loader": "^7.3.0",
+    "style-loader": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -68,16 +65,17 @@
     "@graphql-typed-document-node/core": "^3.1.0",
     "@sitecore-jss/sitecore-jss-cli": "^21.1.0",
     "@sitecore-jss/sitecore-jss-dev-tools": "^21.1.0",
-    "@storybook/addon-docs": "^6.5.16",
-    "@storybook/addon-essentials": "7.0.0-rc.0",
-    "@storybook/addon-interactions": "^7.0.0-beta.63",
-    "@storybook/addon-links": "^7.0.0-beta.63",
-    "@storybook/blocks": "^7.0.0-beta.63",
-    "@storybook/manager-api": "^7.0.4",
-    "@storybook/nextjs": "^7.0.0-beta.63",
-    "@storybook/react": "^7.0.0-beta.63",
-    "@storybook/testing-library": "^0.0.14-next.1",
-    "@storybook/theming": "^7.0.4",
+    "@storybook/addon-docs": "^7.0.15",
+    "@storybook/addon-essentials": "^7.0.15",
+    "@storybook/addon-interactions": "^7.0.15",
+    "@storybook/addon-links": "^7.0.15",
+    "@storybook/addon-mdx-gfm": "^7.0.15",
+    "@storybook/blocks": "^7.0.15",
+    "@storybook/manager-api": "^7.0.15",
+    "@storybook/nextjs": "^7.0.15",
+    "@storybook/react": "^7.0.15",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/theming": "^7.0.15",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
@@ -110,10 +108,11 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^2.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.52.3",
     "sass-alias": "^1.0.5",
-    "storybook": "7.0.0-rc.7",
-    "storybook-dark-mode": "^2.1.1",
+    "storybook": "^7.0.15",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^6.0.3",
