--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "tailwindcss": "^3.2.7",
     "tailwindcss-themer": "^3.0.1",
     "ts-node": "^9.0.0",
-    "typescript": "~4.3.5",
+    "typescript": "^5.0.4",
     "yaml-loader": "^0.6.0",
     "yarpm": "^1.2.0"
   },
