--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
+    "@typescript-eslint/eslint-plugin": "5",
+    "@typescript-eslint/parser": "^5",
     "autoprefixer": "^10.4.13",
     "axios": "^0.21.1",
     "chalk": "~2.4.2",
