--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "@hedgedoc/html-to-react": "^2.0.0",
     "@material-icons/svg": "^1.0.33",
     "@sitecore-jss/sitecore-jss-nextjs": "^21.1.0",
+    "@vercel/edge-config": "^0.2.1",
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.2.1",
     "css-loader": "^6.7.4",
-    "flagsmith": "^3.18.3",
     "font-awesome": "^4.7.0",
     "graphql": "~15.8.0",
     "graphql-tag": "^2.11.0",
