--- a/.env
+++ b/.env
@@ -55,3 +55,23 @@ DISABLE_SSG_FETCH=
 #DEBUG=sitecore-jss:layout
 # Or everything BUT layout service logs:
 #DEBUG=sitecore-jss:*,-sitecore-jss:layout
+
+# Created by Vercel CLI
+EDGE_CONFIG=""
+NX_DAEMON=""
+TURBO_REMOTE_ONLY=""
+TURBO_RUN_SUMMARY=""
+VERCEL="1"
+VERCEL_ENV="development"
+VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
+VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+VERCEL_GIT_COMMIT_MESSAGE=""
+VERCEL_GIT_COMMIT_REF=""
+VERCEL_GIT_COMMIT_SHA=""
+VERCEL_GIT_PREVIOUS_SHA=""
+VERCEL_GIT_PROVIDER=""
+VERCEL_GIT_PULL_REQUEST_ID=""
+VERCEL_GIT_REPO_ID=""
+VERCEL_GIT_REPO_OWNER=""
+VERCEL_GIT_REPO_SLUG=""
+VERCEL_URL=""
