NOJIRA: Renaming package script.

--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "build": "yarpm-pnpm run bootstrap",
     "graphql:update": "ts-node --project tsconfig.scripts.json ./scripts/fetch-graphql-introspection-data.ts",
     "jss": "jss",
-    "lint:js": "eslint ./src/**/*.tsx ./src/**/*.ts ./scripts/**/*.ts",
+    "lint": "eslint ./src/**/*.tsx ./src/**/*.ts ./scripts/**/*.ts",
     "next:build": "next build",
     "next:dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "next:start": "next start",
@@ -145,7 +145,7 @@
     "test": "jest",
     "storybook": "yarpm-pnpm run bootstrap && storybook dev -p 6006",
     "build-storybook": "yarpm-pnpm run bootstrap && storybook build",
-    "precommit": "yarpm-pnpm run lint:js",
+    "precommit": "yarpm-pnpm run lint",
     "prepare": "husky install"
   }
 }
