NOJIRA: Updating Storybook from v7.1.1 to v7.2.1.

--- a/package.json
+++ b/package.json
@@ -55,8 +55,7 @@
     "next-localization": "^0.12.0",
     "nprogress": "~0.2.0",
     "postcss-loader": "^7.3.0",
-    "style-loader": "^3.3.3",
-    "tailwind-config": "^0.1.2"
+    "style-loader": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
@@ -69,17 +68,17 @@
     "@graphql-typed-document-node/core": "^3.1.0",
     "@sitecore-jss/sitecore-jss-cli": "^21.1.0",
     "@sitecore-jss/sitecore-jss-dev-tools": "^21.1.0",
-    "@storybook/addon-docs": "^7.1.1",
-    "@storybook/addon-essentials": "^7.1.1",
-    "@storybook/addon-interactions": "^7.1.1",
-    "@storybook/addon-links": "^7.1.1",
-    "@storybook/addon-mdx-gfm": "^7.1.1",
-    "@storybook/blocks": "^7.1.1",
-    "@storybook/manager-api": "^7.1.1",
-    "@storybook/nextjs": "^7.1.1",
-    "@storybook/react": "^7.1.1",
+    "@storybook/addon-docs": "^7.2.1",
+    "@storybook/addon-essentials": "^7.2.1",
+    "@storybook/addon-interactions": "^7.2.1",
+    "@storybook/addon-links": "^7.2.1",
+    "@storybook/addon-mdx-gfm": "^7.2.1",
+    "@storybook/blocks": "^7.2.1",
+    "@storybook/manager-api": "^7.2.1",
+    "@storybook/nextjs": "^7.2.1",
+    "@storybook/react": "^7.2.1",
     "@storybook/testing-library": "^0.2.0",
-    "@storybook/theming": "^7.1.1",
+    "@storybook/theming": "^7.2.1",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "14.2.0",
@@ -117,12 +116,13 @@
     "react-dom": "^18.2.0",
     "sass": "^1.52.3",
     "sass-alias": "^1.0.5",
-    "storybook": "^7.1.1",
+    "storybook": "^7.2.1",
     "storybook-addon-mock": "^4.1.0",
     "storybook-addon-rtl-direction": "^0.0.19",
     "stylelint": "^15.2.0",
     "stylelint-config-standard": "^30.0.1",
     "stylelint-order": "^6.0.3",
+    "tailwind-config": "^0.1.2",
     "tailwind-variants": "^0.1.4",
     "tailwindcss": "^3.2.7",
     "tailwindcss-themer": "^3.0.1",
